# QRMatrix.CPP

./: .gitignore  LICENSE  README.md  genCmakeFilesList.sh
DOCS/: examples.md  index.md  vocabulary.md
DevTools/: devtools.cpp  devtools.h
Examples/01.SVG/: CMakeLists.txt  main.cpp  qrmatrixsvg.cpp  qrmatrixsvg.h
Examples/02.LibSPNG/QRMatrixExample/: CMakeLists.txt  main.cpp
Examples/03.QT/QRMatrixExample/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Examples/04.CoreGraphic/MacOS/QRMatrix/QRMatrix/: QRMatrix.h  QRMatrixLib.h  QRMatrixLib.mm
Examples/04.CoreGraphic/MacOS/QRMatrix/QRMatrix.xcodeproj/: project.pbxproj
Examples/04.CoreGraphic/MacOS/QRMatrixExample/QRMatrixExample/: AppDelegate.swift  ViewController.swift
Examples/04.CoreGraphic/MacOS/QRMatrixExample/QRMatrixExample.xcodeproj/: project.pbxproj
Examples/04.CoreGraphic/MacOS/QRMatrixExample/QRMatrixExample/Base.lproj/: Main.storyboard
Examples/04.CoreGraphic/iOS/QRMatrix/QRMatrix/: QRMatrixLib.h  QRMatrixLib.mm
Examples/04.CoreGraphic/iOS/QRMatrix/QRMatrix.xcodeproj/: project.pbxproj
Examples/04.CoreGraphic/iOS/QRMatrixExample/QRMatrixExample/: AppDelegate.swift  ViewController.swift
Examples/04.CoreGraphic/iOS/QRMatrixExample/QRMatrixExample.xcodeproj/: project.pbxproj
Examples/04.CoreGraphic/iOS/QRMatrixExample/QRMatrixExample/Base.lproj/: Main.storyboard
Examples/05.Android/: settings.gradle.kts
Examples/05.Android/app/: build.gradle.kts
Examples/05.Android/app/src/androidTest/java/com/example/qrmatrixexample/: ExampleInstrumentedTest.kt
Examples/05.Android/app/src/main/: AndroidManifest.xml
Examples/05.Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Examples/05.Android/app/src/main/java/com/example/qrmatrixexample/: MainActivity.kt
Examples/05.Android/app/src/main/res/layout/: activity_main.xml
Examples/05.Android/app/src/main/res/values/: strings.xml  themes.xml
Examples/05.Android/app/src/main/res/values-night/: themes.xml
Examples/05.Android/app/src/test/java/com/example/qrmatrixexample/: ExampleUnitTest.kt
Examples/05.Android/gradle/wrapper/: gradle-wrapper.properties
QRMatrix/: common.cpp  common.h  constants.h  qrmatrixboard.cpp  qrmatrixboard.h  qrmatrixencoder.cpp  qrmatrixencoder.h  qrmatrixextramode.cpp  qrmatrixextramode.h  qrmatrixsegment.cpp  qrmatrixsegment.h
QRMatrix/Encoder/: alphanumericencoder.cpp  alphanumericencoder.h  kanjiencoder.cpp  kanjiencoder.h  numericencoder.cpp  numericencoder.h
QRMatrix/Exception/: qrmatrixexception.cpp  qrmatrixexception.h
QRMatrix/Polynomial/: polynomial.cpp  polynomial.h
String/: latinstring.cpp  latinstring.h  shiftjisstring.cpp  shiftjisstring.h  shiftjisstringmap.cpp  shiftjisstringmap.h  unicodepoint.cpp  unicodepoint.h  utf16string.cpp  utf16string.h  utf8string.cpp  utf8string.h
